JSAI/error/src/test/resources/base/v0026.js
var arr = new Array(2,3,5,"hello", "world", true);
var arr5 = arr["5"];
print(arr5);

